# LightBoxGL

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  imgui.ini
resources/shaders/: basicLightning.frag  basicLightning.vert  colors.frag  lightcube.frag  lightcube.vert
scripts/: BUILD.bat  BUILD.sh  BUILD_RUN.sh
shaders/: triangle.frag
src/: main.cpp
src/Camera/: Camera.cpp  Camera.h
src/Logger/: Logger.h
src/Shader/: Shader.cpp  Shader.h
src/Utils/: Utils.cpp  Utils.h
src/idk/: test.h
